force-app/main/default/objects/OrderItem/fields/Aviso_de_stock__c.field-meta.xml
<CustomField>
    <fullName>Aviso_de_stock__c</fullName>
    <formula>IF(
    ISPICKVAL(Estado_stock__c,&apos;Disponible&apos; ), IMAGE(&quot;https://force2b-icons-developer-edition.na39.force.com/img/msg_icons/confirm24.png&quot;, &quot;Green&quot;) ,
 IF(ISPICKVAL(Estado_stock__c,&apos;Entrega parcial&apos; ),IMAGE(&quot;https://force2b-icons-developer-edition.na39.force.com/img/msg_icons/warning24.png&quot;,&quot;Yellow&quot;) , IMAGE(&quot;https://force2b-icons-developer-edition.na39.force.com/img/msg_icons/error24.png&quot;, &quot;Red&quot;) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aviso de stock</label>
    <type>Text</type>
</CustomField>