force-app/main/default/objects/OrderItem/fields/Cantidad_de_Bultos__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Bultos__c</fullName>
    <label>Cantidad de Bultos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>