force-app/main/default/objects/OrderItem/fields/Cantidad_disponible_para_el_pedido__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_disponible_para_el_pedido__c</fullName>
    <label>Cantidad disponible para el pedido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>