force-app/main/default/objects/OrderItem/fields/Dan360_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Descuento__c</fullName>
    <description>Descuento que se aplica al producto</description>
    <label>Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>