force-app/main/default/objects/OrderItem/fields/Dan360_ListPrice__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ListPrice__c</fullName>
    <description>Campo para calcular los descuentos.</description>
    <label>List Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>