force-app/main/default/objects/OrderItem/fields/Dan360_UnidadMedida__c.field-meta.xml
<CustomField>
    <fullName>Dan360_UnidadMedida__c</fullName>
    <label>Unidad de medida</label>
    <length>255</length>
    <type>Text</type>
</CustomField>