force-app/main/default/objects/OrderItem/fields/Descripcion_del_producto__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_del_producto__c</fullName>
    <label>Descripción del producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>