force-app/main/default/objects/OrderItem/fields/Descuento__c.field-meta.xml
<CustomField>
    <fullName>Descuento__c</fullName>
    <formula>PricebookEntry.Descuento_aplicado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>