force-app/main/default/objects/OrderItem/fields/Estado_stock__c.field-meta.xml
<CustomField>
    <fullName>Estado_stock__c</fullName>
    <label>Estado stock</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disponible</fullName>
            </value>
            <value>
                <fullName>Entrega parcial</fullName>
            </value>
            <value>
                <fullName>Sin stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>