force-app/main/default/objects/OrderItem/fields/Id_inventory_item__c.field-meta.xml
<CustomField>
    <fullName>Id_inventory_item__c</fullName>
    <formula>PricebookEntry.Product2.Id_inventory_item__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id inventory item</label>
    <type>Text</type>
</CustomField>