force-app/main/default/objects/OrderItem/fields/Order_quantity_UOM__c.field-meta.xml
<CustomField>
    <fullName>Order_quantity_UOM__c</fullName>
    <formula>PricebookEntry.Product2.Unidad_de_medida__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order quantity UOM</label>
    <type>Text</type>
</CustomField>