force-app/main/default/objects/OrderItem/fields/Org_sys_discount_ref__c.field-meta.xml
<CustomField>
    <fullName>Org_sys_discount_ref__c</fullName>
    <formula>PricebookEntry.Disc_Line_id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org sys discount ref</label>
    <type>Text</type>
</CustomField>