force-app/main/default/objects/OrderItem/fields/Pedido_listo__c.field-meta.xml
<CustomField>
    <fullName>Pedido_listo__c</fullName>
    <formula>Order.Pedido_listo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pedido listo</label>
    <type>Checkbox</type>
</CustomField>