force-app/main/default/objects/OrderItem/fields/Porcentaje_descuento__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_descuento__c</fullName>
    <formula>PricebookEntry.Descuento_aplicado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porcentaje descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>