force-app/main/default/objects/OrderItem/fields/Test_Producto__c.field-meta.xml
<CustomField>
    <fullName>Test_Producto__c</fullName>
    <description>Obtiene la descripción del producto a fin de poder mostrarlo en reportes</description>
    <formula>PricebookEntry.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test_Producto</label>
    <type>Text</type>
</CustomField>