force-app/main/default/objects/OrderItem/fields/Unit_Price_with_Discount__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_with_Discount__c</fullName>
    <formula>ListPrice - ( ListPrice* Dan360_Descuento__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price with Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>