force-app/main/default/objects/OrderItem/validationRules/Dan360_Cantidad.validationRule-meta.xml
<ValidationRule>
    <fullName>Dan360_Cantidad</fullName>
    <active>true</active>
    <description>Regla que impide al usuario cambiar la cantidad cuando un pedido no esta en borrador</description>
    <errorConditionFormula>AND(
				NOT(ISPICKVAL(Order.Status, &apos;Borrador&apos;)),
				ISCHANGED(Quantity),
    NOT($Permission.Edit_Orders_Retenidas)				
				)</errorConditionFormula>
    <errorDisplayField>Quantity</errorDisplayField>
    <errorMessage>Solo puede modificar la cantidad, cuando el estado del pedido es &quot;Borrador&quot;</errorMessage>
</ValidationRule>